# creep_cal

./: .eslintignore  .gitignore  DESIGN.md  PROJECT_INTRO.md  README.md  RUST_INTEGRATION.md  aci209.html  aci209.js  aci209_excel.html  aci209_excel.js  b4.html  b4.js  b4_excel.html  b4_excel.js  b4excel.js  b4s.html  b4s.js  b4s_excel.html  b4s_excel.js  excelstyles.css  index.html  mc2010.html  mc2010.js  mc2010_excel.html  mc2010_excel.js  package-lock.json  package.json  sieve.html  styles.css  tailwind.config.js  vite.config.js  wrangler.toml
assets/css/: base.css  components.css  excel.css
assets/js/: theme.js  utils.js
public/: 404.html  index.html  manifest.json
public/模型示例/: B4s示例.csv  B4s示例.xlsx  B4示例.csv  B4示例.xlsx  aci209示例.csv  aci209示例.xlsx  mc2010示例.csv
public/模型说明/: aci209.md  b4.md  b4s.md  mc2010.md
rust-engine/: Cargo.toml  build.bat  build.sh
rust-engine/src/: aci209.rs  b4.rs  b4s.rs  lib.rs  mc2010.rs  utils.rs
src/: App.css  App.js  App.jsx  App.test.js  App.test.jsx  index.css
src/components/: Aci209Calculator.js  Aci209Calculator.jsx  AnalysisPage.js  AnalysisPage.jsx  B4Calculator.js  B4Calculator.jsx  B4sCalculator.js  B4sCalculator.jsx  BatchCalculator.js  BatchCalculator.jsx  DocsPage.js  DocsPage.jsx  ErrorBoundary.js  ErrorBoundary.jsx  LoadingSpinner.jsx  MarkdownViewer.js  Mc2010Calculator.js  Mc2010Calculator.jsx  RustAci209Calculator.js  RustAci209Calculator.jsx  RustB4Calculator.js  RustB4Calculator.jsx  RustB4sCalculator.js  (+5 more)
模型示例/: B4s示例.xlsx  B4示例.xlsx  aci209示例.xlsx  mc2010示例.xlsx  sieve_data.xlsx
(+29 files in other folders)
