[package]
name = "creep-calculator-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
# 优化WebAssembly性能
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
